<resources>
    <string name="app_name">WeathApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="city">City</string>
    <string name="time">Time</string>
    <string name="description">Descritpion</string>
    <string name="temp_short">Temp</string>
    <string name="title_today">Today</string>
    <string name="title_forecast">Forecast</string>
    <string name="wind">Wind</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
</resources>